[package]
name = "chess-logic-shared"
version = "0.1.0"
edition = "2021"
authors = ["trilltino"]
description = "Shared chess logic and validation for XFChess (Nimzovich version)"

[dependencies]
nimzovich_engine = { path = "../nimzovich_engine", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["std", "uci"]
std = ["nimzovich_engine/std"]
uci = ["std"]

[dev-dependencies]
