[package]
name = "chess_engine"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
futures-lite.workspace = true
instant = { version = "0.1", features = ["wasm-bindgen"] }

[features]
default = []
salewskiChessDebug = []

[lib]
name = "chess_engine"
path = "src/lib.rs"
