[package]
name = "er-cu-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "=2.2.1"
solana-sdk = "=2.2.1"
solana-program = "=2.2.1"
solana-transaction-status = "=2.2.1"
sha2 = "0.10"
nimzovich_engine = { path = "../nimzovich_engine" }
ephemeral-rollups-sdk = { version = "0.8.5" }
