[package]
name = "shakmaty-host-vendored"
version = "0.30.0"
description = "Chess and chess variant rules and operations (vendored host-std)"
edition = "2024"

[features]
default = ["std", "uci"]
alloc = ["serde?/alloc"]
std = ["alloc", "btoi/std", "nohash-hasher?/std"]
variant = []
nohash-hasher = ["dep:nohash-hasher"]
serde = ["dep:serde"]
uci = []

[dependencies]
arrayvec = { version = "0.7", default-features = false }
bitflags = "2.0.0"
btoi = { version = "0.5", default-features = false }
nohash-hasher = { version = "0.2", default-features = false, optional = true }
serde = { version = "1.0.197", default-features = false, optional = true }
