[package]
name = "shakmaty-no-std"
version = "0.27.3"
description = "Chess and chess variant rules and operations (vendored no-std)"
repository = "https://github.com/niklasf/shakmaty"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games", "parser-implementations"]
keywords = ["chess", "lichess"]
edition = "2021"
rust-version = "1.75"

[features]
default = []
alloc = ["serde?/alloc"]
std = ["alloc", "btoi/std", "nohash-hasher?/std"]
variant = []
nohash-hasher = ["dep:nohash-hasher"]
serde = ["dep:serde"]

[dependencies]
bitflags = "2.0.0"
btoi = { version = "0.4", default-features = false }
arrayvec = { version = "0.7", default-features = false }
nohash-hasher = { version = "0.2", default-features = false, optional = true }
serde = { version = "1.0.197", default-features = false, optional = true }
