[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3", default-features = false }
lightyear = { version = "0.25.5", features = ["leafwing"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["serde", "v4", "js"] }

[dev-dependencies]
bincode = "1.3"
