[package]
name = "solana-chess-client"
version.workspace = true
edition.workspace = true

[dependencies]
solana-client.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
anchor-lang = "0.32.1"
xfchess-game = { path = "../../programs/xfchess-game" }
solana-program.workspace = true

[dev-dependencies]
assert_matches = "1.5"
