[package]
name = "xfchess-ai-service"
version.workspace = true
edition.workspace = true

[dependencies]
solana-sdk.workspace = true
solana-client.workspace = true
anchor-lang = "0.32.1"
tokio.workspace = true
anyhow.workspace = true
log = "0.4.29"
env_logger = "0.11.9"
serde.workspace = true
serde_json.workspace = true

# Local crates
xfchess-game = { path = "../../programs/xfchess-game" }
solana-chess-client = { path = "../solana-chess-client" }
braid_stockfish_ai = { path = "../braid_stockfish_ai" }
shared = { path = "../shared" }
# Use host-vendored shakmaty
shakmaty = { package = "shakmaty-host-vendored", path = "../shakmaty-host-vendored", default-features = false, features = ["alloc"] }

bs58 = "0.5.1"
