[package]
name = "xfchess-anticheat"
version = "0.1.0"
edition = "2021"
description = "Server-side post-game anti-cheat analysis for XFChess"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
