[package]
name = "xfchess-game"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
autotests = false

[lib]
crate-type = ["cdylib", "lib"]
name = "xfchess_game"

[features]
default = ["cranks", "move-validation"]
idl-build = ["anchor-spl/idl-build"]
move-validation = ["chess-logic-on-chain"]
cranks = ["magicblock-magic-program-api", "bincode"]
game-tests = []
legacy-game-tests = []

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = "=0.31.1"
solana-program = "=2.2.1"
# solana-program version pulled in by anchor-lang
chess-logic-on-chain = { workspace = true, optional = true }
ephemeral-rollups-sdk = { version = "0.13.0", features = ["anchor"] }

# Crank dependencies (MagicBlock scheduled tasks) — gated by the `cranks` feature
magicblock-magic-program-api = { version = "=0.3.1", default-features = false, optional = true }
bincode = { version = "=1.3", optional = true }

# Ephemeral-Rollups move-path suite. Runs the real on-chain `record_move`
# logic in-process via solana-program-test (loads target/deploy/xfchess_game.so).
# Requires `cargo build-sbf` first. See docs/ER_TESTING.md.
[[test]]
name = "er_move_tests"
path = "tests/er_move_tests.rs"

# Delegation/undelegation account-constraint suite (negative paths that don't
# need a live ER — e.g. the magic_program/magic_context address constraints).
[[test]]
name = "er_delegation_tests"
path = "tests/er_delegation_tests.rs"

# Treasury-withdrawal and close_tournament fixes. Seeds account state directly
# and runs the built .so via solana-program-test.
[[test]]
name = "treasury_tests"
path = "tests/treasury_tests.rs"

[[test]]
name = "game_settlement_tests"
path = "tests/game_settlement_tests.rs"

[[test]]
name = "profile_session_tests"
path = "tests/profile_session_tests.rs"

[[test]]
name = "dispute_tests"
path = "tests/dispute_tests.rs"

[[test]]
name = "tournament_registration_tests"
path = "tests/tournament_registration_tests.rs"

[[test]]
name = "tournament_match_tests"
path = "tests/tournament_match_tests.rs"

[[test]]
name = "tournament_prize_tests"
path = "tests/tournament_prize_tests.rs"

# Byte-level lock of instruction arg layouts that the backend and game-client
# builders construct by hand (no IDL) — catches enum/arg drift at test time.
[[test]]
name = "instruction_layout_tests"
path = "tests/instruction_layout_tests.rs"

[dev-dependencies]
tokio = { version = "=1", features = ["full"] }
solana-program-test = "=2.2.1"
solana-sdk = "=2.2.1"
# Reused to craft board state and compute expected next-boards exactly as the
# program does (zero divergence between test oracle and on-chain validator).
chess-logic-on-chain = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow" }
