[package]
name = "nimzovich_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "2.0.17", optional = true }
futures-lite = { version = "2.0", optional = true }
instant = { version = "0.1", features = ["wasm-bindgen"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
shakmaty = "0.27"

[features]
default = ["std", "search"]
std = ["thiserror", "futures-lite"]
search = ["std"]
salewskiChessDebug = []

[lib]
name = "nimzovich_engine"
path = "src/lib.rs"
