[package]
name = "swiss-pairing"
version.workspace = true
edition.workspace = true
description = "FIDE Dutch Swiss pairing engine with color balancing"
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Optional networking integration
braid-iroh = { path = "../../zarathustra_net/braid-iroh", optional = true }
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = ["std"]
std = []
network = ["braid-iroh", "axum", "tokio"]
